# pact-ax

./: .dockerignore  .env.example  .gitignore  Dockerfile  PR_DESCRIPTION.md  PR_DESCRIPTION2.md  README.md  access.db  docker-compose.yml  package.json  pact-ax-audit.jsonl  pyproject.toml  requirements.txt  tsconfig.json
.cursor/: mcp.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
blog/: conscious_continuity_article.md  cross-substrate-invariance.md  star-topology-brute-force.md
docs/: README.md  doctrine.md  story_keeper_guide (1).md  story_keeper_guide.md
examples/: README.md  context_security_demo.py  state_transfer_demo.py  story_keeper_demo.py  what_emerges_after_storyKeeper.md
examples/four_primitive_demo/: README.md  demo.py  server.js
examples/two_agent_demo/: README.md  demo.py  demo_history.db  ledger.py  requirements.txt
pact_ax/: __init__.py  version.py
pact_ax/access/: email.py  keys.py  rate_limit.py
pact_ax/api/: middleware.py  server.py
pact_ax/api/routes/: access.py  agent_router.py  capabilities.py  consensus.py  context_share.py  dead_letter.py  episodic_memory.py  orchestrate.py  policy_align.py  seam_observer.py  state_transfer.py  story_keeper.py  trust.py  trust_chain.py
pact_ax/coordination/: __init__.py  consensus.py  coordination_bus.py  gossip_clarity.py  humility_aware.py  policy_alignment.py  trust_primitives.py
pact_ax/core/: base_primitive.py  schemas.py
pact_ax/integration/: hx_bridge.py
pact_ax/mcp/: server.py
pact_ax/observability/: event_bus.py
pact_ax/orchestration/: __init__.py  orchestrator.py
pact_ax/primitives/: __init__.py  agent_router.py  capability_registry.py  dead_letter_queue.py  episodic_memory.py  epistemic.py  state_transfer.py  story_keeper.py  trust_alignment.py  trust_chain.py  trust_context.py  trust_score.py  trust_store.py
pact_ax/primitives/context_security/: audit.py  manager.py  policies.py
pact_ax/primitives/context_share/: __init__.py  encryption.py  manager.py  schemas.py
pact_ax/state/: __init__.py  epistemic_transfer.py  state_transfer_manager.py
pact_ax/storage/: story_store.py
primitives/story_keeper/: extending_to_hx.md
proxy/: README.md  config.example.yaml  cursor-github-mcp-demo.md  demo.py  start_proxy.sh
proxy/src/: __init__.py  __main__.py  proxy.py  rlp_bridge.py  story_keeper.py
src/demo/: server.ts
src/engine/: PACTProtocolEngine.ts
src/frontend/: index.html
story_keeper_test/: test_story_keeper.py
tests/: conftest.py  test_consensus.py  test_coordination_bus.py  test_state_transfer_manager.py  test_story_keeper.py
tests/integration/: test_e2e_agent_handoff.py  test_full_routing_flow.py  test_schemathesis_fuzz.py
tests/unit/: test_access_layer.py  test_agent_router.py  test_api_capabilities.py  test_api_consensus.py  test_api_context_share.py  test_api_dead_letter.py  test_api_episodic_memory.py  test_api_policy_align.py  test_api_state_transfer.py  test_api_story_keeper.py  test_api_trust.py  test_capability_registry.py  test_context_share.py  test_dead_letter_queue.py  test_episodic_memory.py  test_epistemic_transfer.py  test_policy_align.py  test_trust_alignment.py  test_trust_chain.py  test_trust_gated_transfer.py  test_trust_store.py
(+1 files in other folders)
